added report files

--- a/report/top.tex
+++ b/report/top.tex
@@ -39,7 +39,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Titlepage %%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%
-\author{Trond Snekvik\\ trond@mail.com\\\\ Kaj Andreas Palm \\kajpalm@gmail.com\\\\Christopher Benjamin Westlye\\ chris@mail.com\and Raymond Selvik\\ raymond@stud.ntnu.no}
+\author{Trond Snekvik\\ trondesn@stud.ntnu.no\\\\ Kaj Andreas Palm \\kajpalm@gmail.com\\\\Christopher Benjamin Westlye\\ chriwes@stud.ntnu.no\and Raymond Selvik\\ raymondd@stud.ntnu.no}
 \title{\MakeUppercase{\bf Prosjektrapport} \\ \Large{Datamaskinarkitektur TDT4160ishsomething}}
 \date{}
 
