fixed some shite on ze report

--- a/report/top.tex
+++ b/report/top.tex
@@ -4,7 +4,7 @@
 %%% Style packages %%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[utf8]{inputenc}
-\usepackage[norsk]{babel}
+\usepackage[english]{babel}
 \setlength{\parindent}{0pt} 
 \setlength{\parskip}{2ex}
 \usepackage{a4wide}
@@ -39,7 +39,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Titlepage %%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%
-\author{Trond Snekvik\\ trondesn@stud.ntnu.no\\\\ Kaj Andreas Palm \\kajpalm@gmail.com\\\\Christopher Benjamin Westlye\\ chriwes@stud.ntnu.no\and Raymond Selvik\\ raymondd@stud.ntnu.no}
+\author{Trond Snekvik\\ trondesn@stud.ntnu.no\\\\ Kaj Andreas Palm \\kajpalm@gmail.com\and Christopher Benjamin Westlye\\ chriwes@stud.ntnu.no\\\\ Raymond Selvik\\ raymondd@stud.ntnu.no}
 \title{\MakeUppercase{\bf Prosjektrapport} \\ \Large{Datamaskinarkitektur TDT4160ishsomething}}
 \date{}
 
