--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -3,4 +3,4 @@ The performance of a modern CPU is much higher than the RAM. Most of the perform
 
 The cache can be designed in many ways. It can for example be direct mapped which will have fastest hit times, but a fully associative will have the best trade off if there is many misses.But the cache design is deterministic and it does not know how the memory is mapped in a computer program. The performance can then be increased by adding a prefetcher. A prefetcher is a program that determines what the next memory call from the CPU will be, and load the memory location into the cache. The prefetcher can be designed by that fact that a computer program is containing many arrays and repetitive function which will have a known memory location relatively to each other.
 
-The goal of this prosject is to make a prefetcher that has a algorithm that will decrease memory misses by the CPU. The soulution presented in this report is based on pattern regnonition implemented as a two dimensional vector structure.
+The goal of this prosject is to make a prefetcher that has a algorithm that will decrease memory misses by the CPU. The soulution presented in this report is based on pattern regnonition implemented as a two dimensional vector structure...
