fikset på top.tex slik at ting blir som det skal i stova

--- a/report/top.tex
+++ b/report/top.tex
@@ -57,28 +57,36 @@
 \tableofcontents
 \pagestyle{plain} %Normal chapter numbering
 
-\clearpage
+\begin{abstract}
 \input{abstract.tex}
+\end{abstract}
 
-\clearpage
+\newpage
+\chapter{Introduction}
 \input{introduction.tex}
 
-\clearpage
+\newpage
+\chapter{Background}
 \input{background.tex}
 
-\clearpage
+\newpage
+\chapter{Prefetcher Description}
 \input{prefetcherDescription.tex}
 
-\clearpage
+\newpage
+\chapter{Methodology}
 \input{methodology.tex}
 
-\clearpage
+\newpage
+\chapter{Results}
 \input{results.tex}
 
-\clearpage
+\newpage
+\chapter{Discussion}
 \input{discussion.tex}
 
-\clearpage
+\newpage
+\chapter{Conclusion}
 \input{conclusion.tex}
 
 \end{document}
