Wrote some stuff

--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -1,5 +1,8 @@
-The performance of a modern CPU is much higher than the RAM. Most of the performance time will then be used to access the memory space of the RAM and load it into the CPU. This problem can be solved by adding a cache memory between the CPU and the RAM. Memory will then be access from the cache which has a much better performance. But the cache must also load memory from the RAM, and if the memory is wrong the CPU have to access the RAM anyway. In worst case the cache will have no effect.
+The performance of modern day CPUs is much higher than what can be accommodated by the bus connecting the RAM. Much of the performance time is thus used to access the memory of the RAM and load it into the CPU. This delay can be reduced by adding cache memory and a prefetching scheme to the CPU. Memory fetches can then be done locally within the CPU unit, leading to increased performance. The cache fetches information from the RAM the same way as the CPU. If the prefetched data differs from what was needed, the CPU needs to access the RAM anyway. The worst case scenario is then that the cache will have no effect.
 
-The cache can be designed in many ways. It can for example be direct mapped which will have fastest hit times, but a fully associative will have the best trade off if there is many misses.But the cache design is deterministic and it does not know how the memory is mapped in a computer program. The performance can then be increased by adding a prefetcher. A prefetcher is a program that determines what the next memory call from the CPU will be, and load the memory location into the cache. The prefetcher can be designed by that fact that a computer program is containing many arrays and repetitive function which will have a known memory location relatively to each other.
 
-The goal of this prosject is to make a prefetcher that has a algorithm that will decrease memory misses by the CPU. The soulution presented in this report is based on pattern regnonition implemented as a two dimensional vector structure...
+
+
+The cache can be designed in many ways. It can for example be direct mapped which will have fastest hit times, but a fully associative cache will have the best trade off if there are many misses. The cache assumes the program to be deterministic, but does not know how the memory is mapped in a computer program. The performance can then be increased by adding a prefetcher. A prefetcher is a program that determines what the next memory call from the CPU will be, and load the memory location into the cache. The prefetcher can be designed by that fact that a computer program is containing many arrays and repetitive function which will have a known memory location relatively to each other.
+
+The goal of this project is to make a prefetcher that has a algorithm that will decrease memory misses by the CPU. The solution presented in this report is based on pattern recognition implemented as a two dimensional vector structure...
