Methodology needs parameter info

--- a/report/top.tex
+++ b/report/top.tex
@@ -41,7 +41,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
 \author{Trond Snekvik\\ trondesn@stud.ntnu.no\\\\ Kaj Andreas Palm \\kajpalm@gmail.com\and Christopher Benjamin Westlye\\ chriwes@stud.ntnu.no\\\\ Raymond Selvik\\ raymondd@stud.ntnu.no}
-\title{\MakeUppercase{\bf Prosjektrapport} \\ \Large{Datamaskinarkitektur TDT4260}}
+\title{\MakeUppercase{\bf Project report} \\ \Large{Computer Architecture TDT4260}}
 
 \date{}
 
