--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -1,9 +1,7 @@
-The performance of modern day CPUs is much higher than what can be accommodated by the bus connecting the RAM. Much of the performance time is thus used to access the memory of the RAM and load it into the CPU. This delay can be reduced by adding cache memory and a prefetching scheme to the CPU. Memory fetches can then be done locally within the CPU unit, leading to increased performance. The cache fetches information from the RAM the same way as the CPU. If the prefetched data differs from what was needed, the CPU needs to access the RAM anyway. The worst case scenario is then that the cache will have no effect.
+The performance of a modern day microproessor is much higher than that of typical memory. Much of the computational time is thus used to access the memory of the RAM and load it into the CPU. This is a growing bottleneck in a time where microprocessors are still increasing in performance. 
 
+A prefetcher reduces this bottleneck by predicting which instructions are addressed next. Memory fetches are attempted to be done before the memory is needed by the microprocessor, leading to a decreased time where the processor is stuck in a waiting state. If the prefetched memory addresses differ from what was needed, the processor needs to access the memory anyway. This is the worst case scenario, in which the cache has no effect on performance.
 
-The goal of this prosject is to make a prefetcher that has a algorithm that will decrease memory misses by the CPU. The soulution presented in this report is based on pattern regnonition implemented as a two dimensional vector structure.
+The goal of this project was to make a prefetcher that would increase the performance of a microprocessor. The idea was also to run the prefetcher in a simulator environment with equal hardware specifications for everyone, so that everyone could work with a common interface and the results would be comparable. 
 
-The cache can be designed in many ways. It can for example be direct mapped which will have fastest hit times, but a fully associative cache will have the best trade off if there are many misses. The cache assumes the program to be deterministic, but does not know how the memory is mapped in a computer program. The performance can then be increased by adding a prefetcher. A prefetcher is a program that determines what the next memory call from the CPU will be, and load the memory location into the cache. The prefetcher can be designed by that fact that a computer program is containing many arrays and repetitive function which will have a known memory location relatively to each other.
-
-The goal of this project is to make a prefetcher that has a algorithm that will decrease memory misses by the CPU. The solution presented in this report is based on pattern recognition implemented as a two dimensional vector structure.
-
+The solution presented in this report is based on pattern recognition implemented as a two dimensional vector structure. 
