--- a/report/top.tex
+++ b/report/top.tex
@@ -579,6 +579,8 @@
 
 \section{Backgroud}
 \input{background.tex}
+\section{Related Work}
+\input{relatedWork.tex}
 \section{Prefetcher Description}
 \input{prefetcherDescription}
 \section{Methodology}
