--- a/report/top.tex
+++ b/report/top.tex
@@ -355,7 +355,8 @@
 
 
 % correct bad hyphenation here
-\hyphenation{op-tical net-works semi-conduc-tor}
+%\hyphenation{optical networks semiconductor}
+
 
 
 \begin{document}
@@ -363,7 +364,7 @@
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
 % Do not put math or special symbols in the title.
-\title{TDT4260 Project report}
+\title{TDT4260 Project Report}
 %
 %
 % author names and IEEE memberships
