Det er en grevling i taket

--- a/report/relatedWork.tex
+++ b/report/relatedWork.tex
@@ -1,1 +1,2 @@
-troroeleoeleoeleo
+The most basic prefetcher is called a sequential prefetcher. When a CPU is requesting a memory adress, the prefetcher will also fetch the memory location. The performance of this prefetcher is very limtited sicne it does not have any form of pattern recognition. An improvement of this prefetcher is called tagged sequential prefetcher which divides the sequences into blocks.
+	
