--- a/report/relatedWork.tex
+++ b/report/relatedWork.tex
@@ -1,2 +1,3 @@
 The most basic prefetcher is called a sequential prefetcher. When a CPU is requesting a memory adress, the prefetcher will also fetch the memory location. The performance of this prefetcher is very limtited sicne it does not have any form of pattern recognition. An improvement of this prefetcher is called tagged sequential prefetcher which divides the sequences into blocks.
-	What these have in common, is that the prefetching is not based on statistic. 
+
+What these have in common, is that the prefetching is not based on statistic. A Refernce Prediction Tables RPT is a prefetcher that is based on statistics. This type of prefetcher was first proposed in 1995 by Chan and Baer.
