--- a/report/discussion.tex
+++ b/report/discussion.tex
@@ -1,1 +1,2 @@
-asdf
+The prefetcher did not result in any significant speed increase. It seemed like a good algorithm until it was tested. Seeing how many prefetches are done in any of the tests, it became obvious that attempting to log all patterns seen in such a big address space simply introduced complexity.
+
