--- a/report/top.tex
+++ b/report/top.tex
@@ -185,8 +185,7 @@
 
 % *** SPECIALIZED LIST PACKAGES ***
 %
-\usepackage{otherstuff/algorithm}
-\usepackage{otherstuff/algorithmic}
+%\usepackage{algorithmic}
 % algorithmic.sty was written by Peter Williams and Rogerio Brito.
 % This package provides an algorithmic environment fo describing algorithms.
 % You can use the algorithmic environment in-text or within a figure
@@ -581,8 +580,6 @@
 
 \section{Backgroud}
 \input{background.tex}
-\section{Related Work}
-\input{relatedWork.tex}
 \section{Prefetcher Description}
 \input{prefetcherDescription}
 \section{Methodology}
@@ -1370,18 +1367,13 @@ Appendix two text goes here.
 % <OR> manually copy in the resultant .bbl file
 % set second argument of \begin to the number of references
 % (used to reserve space for the reference number labels box)
-\begin{thebibliography}{10}
+\begin{thebibliography}{1}
 
-\bibitem{reference:jahre} M.~Grannaes, M.~Jahre and L.~Natvig \emph{Storage Efficient Hardware Prefetching using Delta-Correlating Prediction Tables},
-\hskip 1em plus 0.5em minus 0.4em\relax Journal of Instruction-Level Parallelism 13 (2011) 1-16
-
-\bibitem{reference:opg} \emph{M5 simulator system TDT4260 Computer Architecture User documentation},
-\hskip 1em plus 0.5em minus 0.4em\relax Assignment text
-
-\bibitem{reference:spec} SPEC, "SPEC CPU2000 Benchmark Descriptions", 2007
+\bibitem{reference:jahre}
+M.~Grannaes, M.~Jahre and L.~Natvig \emph{Storage Efficient Hardware Prefetching using Delta-Correlating Prediction Tables},\hskip 1em plus
+  0.5em minus 0.4em\relax Journal of Instruction-Level Parallelism 13 (2011) 1-16
 
 \end{thebibliography}
-
 
 % biography section
 % 
@@ -1391,7 +1383,6 @@ Appendix two text goes here.
 % \includegraphics command within an optional argument. (You could create
 % your own custom macro containing the \includegraphics command to make things
 % simpler here.)
-
 %\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{mshell}}]{Michael Shell}
 % or if you just want to reserve a space for a photo:
 
