--- a/report/relatedWork.tex
+++ b/report/relatedWork.tex
@@ -2,4 +2,6 @@ The most basic prefetcher is called a sequential prefetcher. When a CPU is reque
 
 What these have in common, is that the prefetching is not based on statistic.  
 
-A Refernce Prediction Tables RPT is a prefetcher that is based on statistics. This type of prefetcher was first proposed in 1995 by Chan and Baer.
+A Refernce Prediction Tables RPT is a prefetcher that is based on statistics. This type of prefetcher was first proposed in 1995 by Chan and Baer. A RPT contains a table with adresses of the missed fetches as index.
+
+An another type of prefetching is called Delta Correlating Prediction, as described in <INSERT REF HERE!!!>. This prefetcher is based on the RPT and PC/DC.
