methodology.tex maybe done? and fixed a couple of things in top.tex

--- a/report/top.tex
+++ b/report/top.tex
@@ -667,7 +667,7 @@ Appendix two text goes here.
 \bibitem{reference:opg} \emph{M5 simulator system TDT4260 Computer Architecture User documentation},
 \hskip 1em plus 0.5em minus 0.4em\relax Assignment text
 
-\bibitem{reference:spec} SPEC, "SPEC CPU2000 Benchmark Descriptions", 2007
+\bibitem{reference:spec} SPEC, "SPEC CPU2000 Benchmark Descriptions", 2007. http://www.spec.org.
 
 \end{thebibliography}
 
