adjusted figure width

--- a/report/top.tex
+++ b/report/top.tex
@@ -379,7 +379,7 @@
 
 \author{Christopher~Benjamin~Westlye,
         Kaj~Palm,
-        Raymond~Selvik,
+        Raymond~Selvik
        and~Trond~Einar~Snekvik}% <-this % stops a space
 %\thanks{M. Shell is with the Department
 %of Electrical and Computer Engineering, Georgia Institute of Technology, Atlanta,
