--- a/report/background.tex
+++ b/report/background.tex
@@ -1,7 +1,7 @@
 \IEEEPARstart{T}{he} performance of a modern day microprocessor is much higher than that of typical memory. Much of the computational time is thus used to access the memory of the RAM and load it into the CPU. This is a growing bottleneck in a time where microprocessors are still increasing in performance. 
 \\
 \begin{figure}[h!]
-	\includegraphics[scale = 0.5]{graphics/CPUmemoryGap.jpg}
+	\includegraphics[width=3.5in]{graphics/CPUmemoryGap.jpg}
 	\caption{Dette er ei tekning}
 \end{figure}
 \\
