--- a/report/results.tex
+++ b/report/results.tex
@@ -24,6 +24,71 @@ wupwise 	& 1.059 & 0.791 & 0.343 & 0.187 & 279083   & 236426\\
 \end{tabular}
 \end{table}
 
-As seen in table \ref{table:results}, the prefetcher does not perform as well as anticipated. Some tests provide better speedup than others, but the average speedup is only 1\%. There is huge variation between the different tests, with some of the tests even reporting a speed decrease. The prefetcher was initially run on a Linux CentOS, but the results differed greatly from the Kongull Cluster results. Kongull's output was consistent while the other simulator's output varied a lot. Therefore it seemed that Kongull was the most correct simulator
+As seen in table \ref{table:results}, the prefetcher does not provide a significant speedup. Some tests provide better speedup than others, but the average speedup is only 1\%. There is huge variation between the different tests, with some of the tests even reporting a speed decrease. The prefetcher was initially run on a Linux CentOS, but the results differed greatly from the Kongull Cluster results. Kongull's output was consistent while the other simulator's output varied a lot. Therefore it seemed that Kongull was the most correct simulator
 
-Compared to different runs of the same algorithm on the Kongull Cluster, the algorithm's speedup in the various tests remain relatively constant with some being better and some slightly worse. 
+Compared to different runs of the same algorithm on the Kongull Cluster, the algorithm's speedup in the various tests remain relatively constant with some being better and some slightly worse. Especially the benchmarks that use a lot of incrementation suffer bad results. The prefetcher is not able to cache something before it has seen it. If all requests are unique, prefetches will never occur.
+
+The results above adhere to the project guideline of keeping cache size under 8 Kb. Due to the strict limit this imposes on the prefetcher compared to the size of the address space, results from a run without these limits are included in table \ref{table:results2} for comparison.
+
+\begin{table}[!t]
+\renewcommand{\arraystretch}{1.3}
+\caption{Prefetcher results without cache size limit}
+\label{table:results2}
+\centering
+\begin{tabular}{|l|l|l|l|l|l|l|l|}
+\hline
+\bfseries Test & \bfseries Speedup & \bfseries IPC & \bfseries Accuracy & \bfseries Coverage & \bfseries Identified & \bfseries Issued\\
+\hline
+\hline
+ammp 		& 1.000  &	0.082 &	0.210 &	0.001 &	13890679 &	51830\\
+applu 		& 1.021 & 	0.527 &	0.606 &	0.111 &	1508604 & 	420247\\
+apsi 		& 1.015 & 	1.508 &	0.680 &	0.052 &	70265 &	9120\\	
+art110 		& 0.997 & 	0.122 &	0.607 &	0.033 &	13203897 &	981292\\	
+art470 		& 0.997 & 	0.122 &	0.607 &	0.033 &	13203897 &	981292\\
+bzip2\_graphic 	& 1.087 & 	1.431 &	0.915 &	0.356 &	52025 &	36610\\
+bzip2\_program 	& 1.038 & 	1.540 &	0.771 &	0.197 &	17858 &	14172 	\\
+bzip2\_source 	& 1.000 & 	1.709 &	0.768 &	0.259 &	14667 &	11336\\
+galgel 		& 0.994 & 	0.442 &	0.432 &	0.028 &	310736 & 21353\\
+swim 		& 0.978 & 	0.669 &	0.311 &	0.020 &	2125494 & 	149677\\
+twolf 		& 1.003 & 	0.426 &	0.450 &	0.115 &	426956 & 	264981	\\
+wupwise 	& 1.059 & 	0.791 &	0.343 &	0.187 &	279083 & 	236426\\
+\hline
+\end{tabular}
+\end{table}
+
+The results without a cache size limit, shown in table \ref{table:results2} resulted in an average speedup of 1.5\%. This is still low, but an increase from when the limit was imposed. As mentioned above, these results are only included for comparison.
+
+The dcpt algorithm was also implemented and tested for comparison. Results are shown in table
+
+\begin{table}[!t]
+\renewcommand{\arraystretch}{1.3}
+\caption{DCPT Prefetcher results}
+\label{table:results3}
+\centering
+\begin{tabular}{|l|l|l|l|l|l|l|l|}
+\hline
+\bfseries Test & \bfseries Speedup & \bfseries IPC & \bfseries Accuracy & \bfseries Coverage & \bfseries Identified & \bfseries Issued\\
+\hline
+\hline
+ammp 		& 1.000 & 	0.082 &	0.148 &	0.000 &	13045 &	11424\\
+applu 		& 1.074 & 	0.554 &	0.333 &	0.124 &	3424217 & 	831105\\
+apsi 		& 1.084 & 	1.609 &	0.498 &	0.248 &	60278 &	59727\\	
+art110 		& 1.056 & 	0.129 &	0.918 &	0.377 &	14786042 &	5651241\\	
+art470 		& 1.056 & 	0.129 &	0.918 &	0.377 &	14786042 &	5651241\\
+bzip2\_graphic 	& 1.090 & 	1.435 &	0.888 &	0.806 &	89642 &	85079 	\\
+bzip2\_program 	& 1.059 & 	1.571 &	0.793 &	0.588 &	42511 &	41080 	\\
+bzip2\_source 	& 0.992 & 	1.696 &	0.779 &	0.680 &	30397 &	29344\\
+galgel 		& 1.013 & 	0.450 &	0.564 &	0.287 &	239107 &	 166359\\
+swim 		& 1.046 & 	0.716 &	0.600 &	0.475 &	3102812 & 	1792901\\
+twolf 		& 0.997 & 	0.423 &	0.380 &	0.002 &	6042 &	4990 		\\
+wupwise 	& 1.240 & 	0.927 &	0.667 &	0.667 &	556492 & 	433877 	\\
+\hline
+\end{tabular}
+\end{table}
+
+
+
+
+% results from newer test
+% result from dcpt
+% results from Kaj
