--- a/report/relatedWork.tex
+++ b/report/relatedWork.tex
@@ -1,7 +1,7 @@
 The most basic prefetcher is called a sequential prefetcher. When a CPU is requesting a memory adress, the prefetcher will also fetch the memory location. The performance of this prefetcher is very limtited sicne it does not have any form of pattern recognition. An improvement of this prefetcher is called tagged sequential prefetcher which divides the sequences into blocks.
 
-What these have in common, is that the prefetching is not based on statistic.  
+What these have in common, is that the prefetching is not based on statistic. They are instead deterministic fetches where a fixed group or single memory adress is fetched. To improve the performance, prediction based prefetching was developed. These prefetchers will predict the next fetch statisticly.   
 
-A Refernce Prediction Tables RPT is a prefetcher that is based on statistics. This type of prefetcher was first proposed in 1995 by Chan and Baer. A RPT contains a table with adresses of the missed fetches as index.
+A Refernce Prediction Tables RPT is a prefetcher that is based on statistics. This type of prefetcher was first proposed in 1995 by Chan and Baer. A RPT contains a table with adresses of the missed fetches as index. Another variant of this is PC/DC prefetching. 
 
-An another type of prefetching is called Delta Correlating Prediction, as described in <INSERT REF HERE!!!>. This prefetcher is based on the RPT and PC/DC.
+An another type of prefetching is called Delta Correlating Prediction, as described in \cite{reference:jahre}. This prefetcher is based on the RPT and PC/DC.
