--- a/report/top.tex
+++ b/report/top.tex
@@ -379,7 +379,7 @@
 
 \author{Christopher~Benjamin~Westlye,
         Kaj~Palm,
-        Raymond~Selvik
+        Raymond~Selvik,
        and~Trond~Einar~Snekvik}% <-this % stops a space
 %\thanks{M. Shell is with the Department
 %of Electrical and Computer Engineering, Georgia Institute of Technology, Atlanta,
@@ -668,6 +668,8 @@ Appendix two text goes here.
 \hskip 1em plus 0.5em minus 0.4em\relax Assignment text
 
 \bibitem{reference:spec} SPEC, "SPEC CPU2000 Benchmark Descriptions", 2007. http://www.spec.org.
+
+\bibitem	{reference:edn} John~L.~Hennessy, Stanford University and David A.~Patterson, University of California, Berkeley \emph{Memory Hierarchy Design - Part 1. Basics of Memory Hierarchies}, 2012. http://www.edn.com/design/systems-design/4397051/2/Memory-Hierarchy-Design-part-1. 
 
 \end{thebibliography}
 
