--- a/report/relatedWork.tex
+++ b/report/relatedWork.tex
@@ -4,4 +4,4 @@ What these have in common, is that the prefetching is not based on statistic. Th
 
 A Refernce Prediction Tables RPT is a prefetcher that is based on statistics. This type of prefetcher was first proposed in 1995 by Chan and Baer. A RPT contains a table with adresses of the missed fetches as index. Another variant of this is PC/DC prefetching. 
 
-An another type of prefetching is called Delta Correlating Prediction, as described in \cite{reference:jahre}. This prefetcher is based on the RPT and PC/DC.
+An another type of prefetching is called Delta Correlating Prediction, as described in \cite{reference:jahre}. Their purpose war to combine the delta correlating design of PC/DC and the storage effeniency of RPT. Compared to RC/DC, the DCPT reduces the complexity of the prefetching. This is done by recomputing the delta. 
