--- a/report/results.tex
+++ b/report/results.tex
@@ -58,7 +58,7 @@ wupwise 	& 1.059 & 	0.791 &	0.343 &	0.187 &	279083 & 	236426\\
 
 The results without a cache size limit, shown in table \ref{table:results2} resulted in an average speedup of 1.5\%. This is still low, but an increase from when the limit was imposed. As mentioned above, these results are only included for comparison.
 
-The dcpt algorithm was also implemented and tested for comparison. Results are shown in table
+The dcpt algorithm was also implemented and tested for comparison. Results are shown in table \ref{table:results3}.
 
 \begin{table}[!t]
 \renewcommand{\arraystretch}{1.3}
