--- a/report/discussion.tex
+++ b/report/discussion.tex
@@ -1,6 +1,12 @@
-The prefetcher did not result in any significant speed increase. It seemed like a good algorithm until it was tested. Seeing how many prefetches were done in each tests, it became obvious that attempting to log all patterns seen in such a big address space simply introduced complexity. There are extremely many address combinations, reducing the chance that the same patterns are visited multiple times. While the sequences probably will be visited again in the future, many others will take up a lot of the time, rendering the speedup negligible. The use of spatial and temporal locality therefore seems superior, both in terms of simplicity and result.
+The prefetcher did not result in any significant speed increase. It seemed like a good algorithm until it was tested. Seeing how many prefetches were done in each tests, it became obvious that attempting to log all patterns seen in such a big address space simply introduced complexity. There are extremely many address combinations, reducing the chance that the same patterns are visited multiple times. While the sequences probably will be visited again in the future, many others will take up a lot of the time, rendering the potential speed increase negligible. The use of spatial and temporal locality therefore seems superior, both in terms of simplicity and results.
 
-Table REFERER HER! shows an attempt to increase the speedup. It was thought that increasing the cache size would cause many more combinations to be stored, and thus avoid having sequences deleted before they were used due to the massive amount of possible sequences. The lack of speed increase shows that the algorithm was in the wrong from the beginning, and tries to predict too much. It assumes that things happen periodically, something there is no guarantee for in the benchmark tests.
+Table \ref{table:results2} shows an attempt to increase the speedup. It was thought that increasing the cache size would cause many more combinations to be stored, and thus avoid having sequences deleted before they were used due to the massive amount of possible sequences. The lack of speed increase shows that the algorithm was in the wrong from the beginning, and tries to predict too much. It assumes that things happen periodically, something there is no guarantee for in the benchmark tests. 
+
+A possible reason for the low increase in speed can be the large overhead of the system. Even though the simulator should not take this into account, seeing as it is a software simulation, The computational delay will cause an increase in runtime. This is of course a tradeoff with prefetchers. While the use of them might make the computation process faster, they still often require computation which steal away CPU cycles.
+
+The prefetcher is not able to cache something before it has seen it. If all requests are unique, prefetches will never occur. This is especially clear in test ammp shown in table \ref{table:results}. The test is in large part incremental. Memory addresses are for the most part only accessed once, so the prefetching has little to no effect here.
+
+While it is not reflected in the test, the prefetcher could do better in a desktop environment. 
 
 %  Why no speed increase
 % Attempts to increase speed. How and why
