--- a/report/conclusion.tex
+++ b/report/conclusion.tex
@@ -1,1 +1,1 @@
-All in all the prefetcher is comparable to a deterministic implementation of the more stochastic principle of locality approach. The idea of mapping possible sequences directly to their assumed following address might work in a predictable environment, but does not seem to function well in practice. A more useful approach would be to cache the most frequently accessed addresses, or simply the address area around a request. Another reason for the prefetcher's low performance is the size of the accessed memory spaces. With so many combinations, it is a lot less likely that the same sequences will be frequented.
+All in all the prefetcher is comparable to a deterministic implementation of the more stochastic principle of locality approach. The idea of mapping possible sequences directly to their assumed following address might work in a predictable environment, but does not seem to function well in practice. A more useful approach would be to cache the most frequently accessed addresses, or simply the address area around a request. Another reason for the prefetcher's low performance is the size of the accessed memory spaces. With so many combinations, it is not too likely that the same sequences will be frequented a lot. If the memory space was smaller, the same sequences might have been frequented more, resulting in higher accuracy. With the amount of addresses being high, the actual hits drown in the vast amount of possible sequences.
