--- a/report/discussion.tex
+++ b/report/discussion.tex
@@ -1,4 +1,6 @@
-The prefetcher did not result in any significant speed increase. It seemed like a good algorithm until it was tested. Seeing how many prefetches were done in each tests, it became obvious that attempting to log all patterns seen in such a big address space simply introduced complexity. There are extremely many address combinations, reducing the chance that the same patterns are visited multiple times. While the sequences probably will be visited again in the future, many others will take up a lot of the time, rendering the potential speed increase negligible. The use of spatial and temporal locality therefore seems superior, both in terms of simplicity and results.
+The prefetcher did not result in any significant speed increase. It seemed like a good algorithm until it was tested. Seeing how many prefetches were done in each tests, it became obvious that attempting to log all patterns seen in such a big address space simply introduced unnecessary complexity. There are extremely many address combinations, reducing the chance that the same patterns are visited multiple times. While the sequences probably will be visited again in the future, many others will take up a lot of the time, rendering the potential speed increase and accuracy negligible. 
+
+One could compare the prefetcher detailed in this report with a more simple prefetcher based on the locality principle. While such a prefetcher makes a probabilistic assumption that conceding fetches will be related in some spatial or temporal manner, the prefetcher detailed here attempts to be as deterministic as possible. The margin of error allowed is implicitly much lower in the prefetcher detailed in this report, with only directly mapped sequences being prefetched. The use of spatial and temporal locality therefore seems superior, both in terms of simplicity and results.
 
 Table \ref{table:results2} shows an attempt to increase the speedup. It was thought that increasing the cache size would cause many more combinations to be stored, and thus avoid having sequences deleted before they were used due to the massive amount of possible sequences. The lack of speed increase shows that the algorithm was in the wrong from the beginning, and tries to predict too much. It assumes that things happen periodically, something there is no guarantee for in the benchmark tests. 
 
