--- a/report/results.tex
+++ b/report/results.tex
@@ -1,6 +1,6 @@
 
 
-\begin{table}[!t]
+\begin{table*}[!t]
 \renewcommand{\arraystretch}{1.3}
 \caption{Prefetcher results from the Kongull Cluster}
 \label{table:results}
@@ -24,7 +24,7 @@ twolf 		& 0.997 & 0.423 & 0.632 & 0.001 & 1366 	   & 862	\\
 wupwise 	& 1.059 & 0.791 & 0.343 & 0.187 & 279083   & 236426\\
 \hline
 \end{tabular}
-\end{table}
+\end{table*}
 
 As seen in table \ref{table:results}, the prefetcher does not provide a significant speedup. Some benchmarks provide better speedup than others, but the average speedup is only 1\%. There are some rather noteworthy variations regarding how the prefetcher performs on the different benchmarks, with some even reporting a decrease in speedup. These variations will be discussed further in the following section.
 
@@ -36,7 +36,7 @@ Common and noteworthy for both of these results are that the prefetcher performs
 
 
 
-\begin{table}[!t]
+\begin{table*}[!t]
 \renewcommand{\arraystretch}{1.3}
 \caption{Prefetcher results without cache size limit}
 \label{table:results2}
@@ -60,13 +60,13 @@ twolf 		& 1.003 & 	0.426 &	0.450 &	0.115 &	426956 & 	264981	\\
 wupwise 	& 1.059 & 	0.791 &	0.343 &	0.187 &	279083 & 	236426\\
 \hline
 \end{tabular}
-\end{table}
+\end{table*}
 
 
 
 The dcpt algorithm originally proposed in \cite{reference:jahr} was also implemented and tested. For comparison the results are presented in table \ref{table:results3}. As can be seen from the table this implementation is conciderably faster on most benchmarks, and provided an overall avarage speedup of 5.5\%.
 
-\begin{table}[!t]
+\begin{table*}[!t]
 \renewcommand{\arraystretch}{1.3}
 \caption{DCPT Prefetcher results}
 \label{table:results3}
@@ -90,7 +90,7 @@ twolf 		& 0.997 & 	0.423 &	0.380 &	0.002 &	6042 &	4990 		\\
 wupwise 	& 1.240 & 	0.927 &	0.667 &	0.667 &	556492 & 	433877 	\\
 \hline
 \end{tabular}
-\end{table}
+\end{table*}
 
 
 
