--- a/report/methodology.tex
+++ b/report/methodology.tex
@@ -2,7 +2,7 @@ The prefetcher was evalued using the given framework which contained a modified 
 
 In the framework there is also a python script included which decides the arguments and parameters for the simulation. These predefined arguments are given in table \ref{table:cmdlineopt}.
 
-\begin{table}[!t]
+\begin{table*}[!t]
 \renewcommand{\arraystretch}{1.3}
 \caption{Python script command line options}
 \label{table:cmdlineopt}
@@ -18,7 +18,7 @@ In the framework there is also a python script included which decides the argume
 -\--prefetcher=on\_access=True & Have the cache notify the prefetcher on \emph{all} accesses,\\& both hits and misses\\
 \hline
 \end{tabular}
-\end{table}
+\end{table*}
 
 The architecture M5 is simulating is loosely based on the Alpha 21264 microprosessor from the DEC Alpha Tsunami system, which is a superscalar out-of-order CPU. The L1 prefetcher is split in a 32kB instruction cache and a 64kB data cache. Each cache block is 64B. The L2 cache size is 1MB, as defined in table \ref{table:cmdlineopt}, also with a cache block size of 64B. The L2 prefetcher is notified on every access to the L2 cache, both hits and misses, which is also defined in table \ref{table:cmdlineopt}. There is no prefetching for the L1 cache. The memory bus is defined to run at 400MHz with a width of 64 bits and a latency of 30ns \cite{reference:opg}. 
 
